<resources>
    <string name="app_name">Gyms Bond</string>
    <string name="not_have_account_signup">Not have account? <b>SignUp</b></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="add_image">Add image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_ups">Sign Up</string>
    <string name="gym_s_bond">Gym's Bond</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="aa">Aa</string>
</resources>